Optimise runtime image size and set memory limits based on cgroup